# signalflow

./: .clang-format  .gitattributes  .github_changelog_generator  .gitignore  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE.md  Makefile  PLAN  README.md  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  signum-test  signum-test.cpp  sitemap.xml  style.css  syntax.css  test-python-subclass.py  test-python.py  vcpkg.json  wscript
.github/workflows/: build.yml  wheels.yml
NAMING/: index.html
_isobar/: index.html
_isobar/about/: index.html
_isobar/contributing/: index.html
_isobar/devices/: index.html
_isobar/events/: index.html
_isobar/example/: index.html
_isobar/examples/: index.html
_isobar/getting-started/: index.html
_isobar/license/: index.html
_isobar/patterns/: index.html
_isobar/source-code/: index.html
_isobar/timelines/: index.html
_layouts/: default.html
aux/docs/: HISTORY.md  customdoxygen.css  docs.dox  doxy-boot.js  header.html  signalflow.dox
aux/scripts/: generate-docs.sh  generate-node-python-bindings.py  install-git-hooks.sh  node-header-generator-py
auxiliary/benchmarking/: run-benchmark-suite.py
auxiliary/cibuildwheel/: make-macos-x86-arm64.sh  make-raspberry-pi-aarch64.sh  make-windows-amd64.py
auxiliary/prototypes/: README.md
auxiliary/scripts/: auto-generator.py  generate-docs.sh  generate-node-python-bindings.py  install-git-hooks.sh
buffer/: index.html
buffer/access/: index.html
buffer/creating/: index.html
buffer/exporting/: index.html
buffer/input/: index.html
buffer/operators/: index.html
buffer/properties/: index.html
code-of-conduct/: index.html
diagrams/: SignalFlow Architecture.graffle  SignalFlow Node Diagram High Level.graffle  SignalFlow Node Diagram.graffle
docs/: CNAME  code-of-conduct.md  examples.md  getting-started.md  index.md  installation.md  license.md  robots.txt
docs/aux/: customdoxygen.css  docs.dox  footer.html
docs/buffer/: access.md  creating.md  exporting.md  index.md  input.md  operators.md  properties.md
docs/graph/: config.md  creating.md  index.md  properties.md  recording.md  (+1 more)
examples/: CMakeLists.txt  README.md  audio-in-example.cpp  audio-through-example.py  audio-write-example.cpp  buffer-play-example.py  buffer-save-example.cpp  chaotic-feedback-example.py  euclidean-rhythm-example.py  fft-lpf-example.cpp  granulation-example.py  granulator-example.cpp  hello-world-example.py  hello-world.cpp  index-example.cpp  index.html  json-load-example.cpp  karplus-strong-example.py  midi-keyboard-example.py  modulation-example.py  mouse-control-example.cpp  patch-example.cpp  sequencing-example.py  sine-field-example.cpp  spooky-wobble.cpp  supersaw-example.cpp  synth-template-example.cpp  synthdef-example.cpp  trigger-example.cpp  waveshaper-example.cpp  wavetable-2d-example.cpp  wavetable-2d-example.py  wavetable-example.cpp
examples/audio/: gliss.aif
examples/cpp/: CMakeLists.txt  audio-in-example.cpp  buffer-save-example.cpp  fft-lpf-example.cpp  granulator-example.cpp  hello-world.cpp  index-example.cpp  json-load-example.cpp  mouse-control-example.cpp  patch-example.cpp  sine-field-example.cpp  spooky-wobble.cpp  supersaw-example.cpp  trigger-example.cpp  vamp-input-example.cpp  waveshaper-example.cpp  wavetable-2d-example.cpp  wavetable-example.cpp
examples/notebooks/: 01. Hello World.ipynb  02. Patch Example.ipynb  SignalFlow - Audio Record Example.ipynb  SignalFlow - Chaotic Feedback Example.ipynb  SignalFlow - Euclidean Rhythm Example.ipynb  SignalFlow - Modulation Example.ipynb  SignalFlow - Sequencing Example.ipynb  SignalFlow - Wavetable 2D Example.ipynb  isobar - Create Patch Example.ipynb  isobar - Modify Patch Example.ipynb  isobar - Trigger Patch Example.ipynb
examples/patches/: kick-drum.json  sine-env-delay.json  sine.json
examples/python/: audio-through-example.py  buffer-play-example.py  chaotic-feedback-example.py  euclidean-rhythm-example.py  granulation-example.py  hello-world-example.py  karplus-strong-example.py  list-output-devices.py  midi-fm-voicer-example.py  midi-keyboard-example.py  modulation-example.py  sequencing-example.py  wavetable-2d-example.py
examples/synths/: kick-drum.json  sine-env-delay.json  sine.json
getting-started/: index.html
graph/: index.html
howto/: index.html
installation/: index.html
license/: index.html
node/: index.html
patch/: index.html
planning/: EXAMPLES  TROUBLESHOOTING
search/: search_index.json
signal/: buffer.cpp  buffer.h  constants.h  core.cpp  graph.cpp  graph.h  monitor.cpp  monitor.h  node.cpp  node.h  nodedef.cpp  nodedef.h  platform.h  property.h  registry.cpp  registry.h  renderer.cpp  renderer.h  ringbuffer.h  signal.h  structure.cpp  structure.h  synth.cpp  synth.h  synthdef.cpp  synthdef.h  synthregistry.cpp  synthregistry.h  synthspec.cpp  synthspec.h  synthtemplate.cpp  synthtemplate.h  unit.cpp  unit.h  util.cpp  util.h  version.h
signum/: buffer.cpp  buffer.h  constants.h  core.cpp  core.h  graph.cpp  graph.h  monitor.h  nodedef.h  platform.h  registry.cpp  registry.h  ringbuffer.h  signum-dev.h  signum.cpp  signum.h  synth.h  synthdef.h  unit.cpp  unit.cpp-  unit.h  util.cpp  util.h
src/: buffer.cpp  core.cpp  graph.cpp  monitor.cpp  node.cpp  nodedef.cpp  python.cpp  registry.cpp  renderer.cpp  synth.cpp  synthregistry.cpp  synthspec.cpp  synthtemplate.cpp  util.cpp
tests/: __init__.py  test_buffer.py  test_config.py  test_examples.py  test_graph.py  test_kdtree.py  test_node.py  test_node_delays.py  test_node_multichannel_expansion.py  test_node_operations.py  test_node_operators.py  test_node_process.py  test_node_registry.py  test_nodes.py  test_nodes_buffer.py  test_nodes_delays.py  test_nodes_envelope.py  test_nodes_fft.py  test_nodes_granulator.py  test_nodes_oscillators.py  test_nodes_oscillators_lfo.py  test_nodes_processors_multichannel.py  test_nodes_sequencing.py  test_nodes_stochastic.py  test_patch.py  test_synth.py  test_util.py
troubleshooting/: index.html
(+1115 files in other folders)
