[metadata]
name = signalflow
version = 0.5.3
author = Daniel Jones
author_email = dan@erase.net
description = SignalFlow is a sound synthesis library designed for clear and concise expression of sonic ideas
long_description = file: README.md
long_description_content_type = text/markdown
keywords = audio, sound, synthesis, dsp, sound-synthesis
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Topic :: Artistic Software
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
python_requires = >=3.8
setup_requires = 
    pytest-runner
    pybind11-stubgen
install_requires = 
    numpy
package_dir = 
    = auxiliary/libs
include_package_data = true

[options.extras_require]
test =
    pytest
    numpy
    scipy

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts = 
    signalflow = signalflow_cli:main

[options.package_data]
signalflow_stubs = *.pyi
signalflow = *.pyd
